--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
              <br>
              GitHub
-             <a href="https://github.com/fabricembarushimana">Finance Tracker</a>
+             <a href="https://github.com/FabriceMbarushimana/Frontend-web-dev-summative-FabriceMbarushimana">Finance Tracker</a>
           </p>
          </div>
       </section>
@@ -297,4 +297,5 @@
 
   <script type="module" src="scripts/main.js"></script>
 </body>
+
 </html>
